--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,8 @@ project:
   output-dir: docs
 
 website:
-  title: "mrafa3.github.io"
   navbar:
+    title: "Mickey Rafa"
     left:
       - href: index.qmd
         text: Home
@@ -15,6 +15,4 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
-
-editor: visual
-
+    page-layout: full
