adding contents for workshops tab and including Korbel skills workshop

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ website:
       #- about.qmd
       - href: posts.qmd
         text: Portfolio
+      - href: workshops.qmd
+        text: Workshops
 
 format:
   html:
