--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ format:
   html:
     theme:  
       light: minty
-      dark: solar
+      #dark: solar
     css: styles.css
     toc: true
     page-layout: full
