--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
 format:
   html:
     theme:  
-      light: minty
+      light: flatly
       #dark: solar
     css: styles.css
     toc: true
