updating mail yaml settings to render visualizations tab

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
         text: Portfolio
       - href: workshops.qmd
         text: Workshops
+      - href: visualizations.qmd
+        text: Visualizations
 
 format:
   html:
